# cal-reminders

./: .gitignore  CalReminders.spec  Makefile  README.md  entry.py  pyproject.toml
assets/: icon.icns
src/cal_reminders/: __init__.py  app.py  calendar.py  config.py
